--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
 
                      <meta charset="utf-8">
-      <title>Hello, World!</title>
+      <title style="color:blue;"> Hello, World!</title>
              </head>
 <body>
 
                      Hello, World!
              </body>
-</html>
+      <img src="https://www.google.com/search?q=image&rlz=1C1CHBF_enUS954US954&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjehvbc7srzAhWRCTQIHSFeC6cQ_AUoAXoECAEQAw&biw=1536&bih=754&dpr=1.25#imgrc=ZzpsQ2MciBLhdM" alt="dog">
+    <a href="https://en.wikipedia.org/wiki/Dog">Learn more about dogs!</a>
+      </html>
+
