--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
                      <meta charset="utf-8">
       <title>Hello, World!</title>
              </head>
-<body style="color:blue;"> >
+<body style="color:blue; font-size:large;"> >
                      Hello, World!
              </body>
 
